<resources>
    <string name="app_name">KK音乐</string>
    <string name="music_board">音乐播放</string>
    <string name="user_name">用户名</string>
    <string name="user_password">密码</string>
    <string name="hint_name">请输入用户名</string>
    <string name="hint_password">请输入密码</string>
    <string name="remember_password">记住密码</string>
    <string name="auto_login">自动登录</string>
    <string name="register">注册</string>
    <string name="login">登录</string>
    <string name="logout">退出登录</string>
    <string name="user_name2">用户名：</string>
    <string name="user_password2">密码：</string>
    <string name="user_info">用户信息</string>
    <string name="remember_password_or_not">是否记住密码：</string>
    <string name="auto_login_or_not">是否自动登录：</string>
    <string name="my_music_list">我的歌单</string>
    <string name="play_music">播放</string>
    <string name="channel_name">ChannelN</string>
    <string name="channel_description">ChannelD</string>
    <string name="time">00:00</string>
    <string name="stop_play">暂停</string>
    <string name="continue_play">继续</string>
    <string name="recede">退出</string>
    <string name="find_singer">查询歌手</string>
    <string name="singer">歌手：</string>
    <string-array name="songs">
        <item>青花瓷</item>
        <item>江南</item>
        <item>泡沫</item>
    </string-array>
    <string name="wait4check">请选择歌曲</string>
    <string name="prompt">输入用户名和密码后登录</string>
    <string name="logout_account">注销登录状态</string>
</resources>